fixed UI on mobile devices

--- a/src/index.css
+++ b/src/index.css
@@ -80,3 +80,25 @@ input[type="number"]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+
+/* Mobile touch targets */
+@media (max-width: 767px) {
+  button {
+    min-height: 32px;
+    min-width: 32px;
+  }
+
+  input[type="range"] {
+    height: 6px;
+  }
+
+  input[type="range"]::-webkit-slider-thumb {
+    width: 20px;
+    height: 20px;
+  }
+
+  input[type="range"]::-moz-range-thumb {
+    width: 20px;
+    height: 20px;
+  }
+}
